--- a/package.json
+++ b/package.json
@@ -8,17 +8,27 @@
     "dev": "nodemon src/app.ts"
   },
   "dependencies": {
-    "@types/socket.io": "^2.1.11",
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.5",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.161",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.10.1",
+    "@types/socket.io": "^2.1.11",
+    "cors": "^2.8.5",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
