--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev": "nodemon src/app.ts"
   },
   "dependencies": {
+    "@types/config": "0.0.36",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "config": "^3.3.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
