--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "tsc p .",
+    "build": "tsc -p .",
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts"
   },
   "dependencies": {
-    "@types/config": "0.0.36",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
