--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.27.0",
     "mongoose": "^5.10.5",
     "socket.io": "^2.3.0"
   },
