--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
@@ -23,9 +24,11 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/config": "0.0.36",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/express-session": "^1.17.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.36",
@@ -33,7 +36,6 @@
     "@types/socket.io": "^2.1.11",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2",
-    "@types/config": "0.0.36"
+    "typescript": "^4.0.2"
   }
 }
