--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "mongoose": "^5.10.5",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
@@ -33,6 +35,8 @@
     "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.10.1",
+    "@types/passport": "^1.0.4",
+    "@types/passport-google-oauth20": "^2.0.4",
     "@types/socket.io": "^2.1.11",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
