--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "npx --package typescript@4.0.2 tsc -p .",
+    "build-vercel": "npx --package typescript@4.0.2",
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts"
   },
